@@ -3,5 +3,5 @@
 # @shareddir@/boot
 f:::0644:/boot/:upstart:upstart
 f:::0644:/boot/:systemd:systemd
-f:::0644:/boot/:svscan:openrc
+f:::0644:/boot/:openrc:openrc
 f:::0644:/boot/:systemd.override.conf:systemd.override.conf
