@@ -1,6 +1,6 @@
 # WARNING: This file was auto-generated. Do not edit!
 #
-# $Id: svctool.in,v 2.595 2021-07-28 10:27:02+05:30 Cprogrammer Exp mbhangui $
+# $Id: svctool.in,v 2.596 2021-07-28 12:38:12+05:30 Cprogrammer Exp mbhangui $
 #
 
 #
@@ -26,7 +26,7 @@ host=@HOST@
 shared_objects=0
 use_dlmopen=0
 skip_sendmail_check=0
-RCSID="# \$Id: svctool.in,v 2.595 2021-07-28 10:27:02+05:30 Cprogrammer Exp mbhangui $"
+RCSID="# \$Id: svctool.in,v 2.596 2021-07-28 12:38:12+05:30 Cprogrammer Exp mbhangui $"
 
 #
 # End of User Configuration
@@ -7735,12 +7735,12 @@ create_startup()
 				/bin/cp "$DESTDIR"$shareddir/boot/svscan.plist /Library/LaunchDaemons/org.indimail.svscan.plist
 			fi
 		elif [ -f /sbin/openrc-run -a -d /etc/init.d ] ; then
-			cmp -s "$DESTDIR"$shareddir/boot/svscan /etc/init.d/svscan >/dev/null 2>&1
+			cmp -s "$DESTDIR"$shareddir/boot/openrc /etc/init.d/svscan >/dev/null 2>&1
 			if [ $? -ne 0 ] ; then
 				if [ $silent -eq 0 ] ; then
 					echo "svscan startup enabled in rc /etc/init.d/svscan"
 				fi
-				/bin/cp "$DESTDIR"$shareddir/boot/svscan /etc/init.d/svscan
+				/bin/cp "$DESTDIR"$shareddir/boot/openrc /etc/init.d/svscan
 				/bin/chmod 755 /etc/init.d/svscan
 				service svscan enable
 			fi
