@@ -105,6 +105,8 @@ o svscan: set SERVICEDIR, PWD environment variable
 - 27/07/2021
 35. supervise: add feature to run ./init once before ./run
 36. svscan: set SERVICEDIR, PWD environment variable to service directory
+- 28/07/2021
+37. svctool: renamed rc script boot/svscan to boot/openrc for alpine
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 09/10/2020
